--- a/client/src/component/Input.module.css
+++ b/client/src/component/Input.module.css
@@ -3,21 +3,23 @@
     display: flex;
     flex-direction:column;
     height:10rem;
-    background-color: var(--color-background);
-    box-shadow: 3px 3px 3px 3px rgb(228, 228, 228);
+    background-color: var(--color-background);;
     margin-bottom:40px;
-    padding:20px
+    padding:20px;
+    align-items:center;
 }
 .form_input_card label{
     font-size: 1.3rem;
     margin-bottom: 20px;
+    align-self: flex-start;
+    padding-left:20px
 
 }
 .form_input_card input{
     height:3.5rem;
-    width:100%;
+    width:90%;
     padding:5px;
     font-size:1.2rem;
     color:rgb(100,100,100);
-    border-bottom:1px solid rgb(100,100,100)
+    border-bottom:1px solid rgb(210,210,210)
 }
