--- a/client/src/screen/admin_screen/UpgradeForm.module.css
+++ b/client/src/screen/admin_screen/UpgradeForm.module.css
@@ -7,12 +7,11 @@
 .form_main_heading_container{
     display:flex;
     flex-direction: column;
-    padding:20px 0px 30px 0px;
     width:100%;
+    padding:30px 0px 40px 0px;
     margin-right:auto;
     margin-left:auto;
-    background-color: var(--color-blue);
-    height:14vh
+    background-color:var(--color-blue)
 
 }
 
@@ -71,7 +70,7 @@
         width:95%;
     }
     .form_input_card_container{
-        width:90%;
+        width:98%;
     
     }
 
