--- a/client/src/screen/user_screen/signup.module.css
+++ b/client/src/screen/user_screen/signup.module.css
@@ -6,8 +6,8 @@
     padding-top: 70px; 
     padding-bottom:100px;
     width:380px;
-    margin:0px auto 0px auto;
-    height:80vh
+    margin:0px auto 450px auto;
+    height:500px
   }
   
   .form_container h1{
@@ -42,9 +42,8 @@
       padding-top: 100px; 
       padding-bottom:100px;
       width:70%;
-      margin:0px auto 80px auto
+      margin:0px auto 270px auto
     }
     
   }
-  
   
