--- a/client/src/component/getStarted.module.css
+++ b/client/src/component/getStarted.module.css
@@ -3,7 +3,7 @@
     flex-direction:row;
     padding-top:100px;
     padding-bottom:30px;
-    background: linear-gradient(rgb(240,240,240),white);
+    background: #fff;
     margin-bottom:30px
 
 }
