--- a/client/src/component/SectionHead.module.css
+++ b/client/src/component/SectionHead.module.css
@@ -7,16 +7,16 @@
 }
 
 .sectionhead_section h1 {
-    font-size: 2.5rem;
+    font-size: 2.6rem;
     font-family: poppins;
-    font-weight: 900;
+    font-weight: 700;
     margin-bottom: 15px;
 }
 
 .sectionhead_section p {
     font-family: poppins;
-    font-weight: 300;
-    font-size: 17px;
+    font-weight: 400;
+    font-size: 18px;
     color: rgb(100, 100, 100);
     margin-bottom: 80px;
 
@@ -36,7 +36,7 @@
         width: 90%
     }
     .sectionhead_section h1 {
-        font-size: 1.6rem;
+        font-size: 1.9rem;
     }
 
 
@@ -46,15 +46,15 @@
 @media screen and (max-width: 560px) {
     .sectionhead_section h1 {
         text-align: center;
-        width: 100%
+        width: 98%;
     }
 
     .sectionhead_section p {
         text-align: center;
-        width: 100%
+        width: 95%
     }
     .sectionhead_section h1 {
-        font-size: 1.6rem;
+        font-size: 2rem;
     }
 
 }
