--- a/client/src/component/action.module.css
+++ b/client/src/component/action.module.css
@@ -1,5 +1,5 @@
 .action_section {
-    padding-bottom: 70px;
+    padding-bottom: 50px;
     padding-top: 20px;
     display: flex;
     flex-direction: column;
@@ -28,6 +28,7 @@
 .action  h1{
     font-size:1.5rem;
     font-family: poppins;
+    color:rgb(120,120,120)
 }
 
 @media screen and (max-width: 600px) {
@@ -43,6 +44,7 @@
     .action {
         text-align:center;
         padding-top:30px;
-        padding-bottom:30px
+        padding-bottom:30px;
+        margin-bottom:60px
     }
 }
