--- a/client/src/component/earnSection.module.css
+++ b/client/src/component/earnSection.module.css
@@ -38,11 +38,11 @@
 
 .earn_tech {
     width: 100%;
-    padding-right: 4%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
+    padding-right:10px
 
 
 
@@ -118,18 +118,18 @@
     .earn_container {
         display: flex;
         flex-direction: column;
+        align-items: center;
 
     }
 
     .earn_section {
         width: 70%;
-        padding-left: 4%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: 0px auto 0px auto;
         text-align: center;
+        margin-bottom:20px
 
 
     }
@@ -139,16 +139,17 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-right:0px;
+        margin-bottom: 5px;
 
     }
 
     .earn_tech_content {
         width: 95%;
-        margin: 0px auto 0px auto;
-        border: 1px solid rgb(220, 220, 220);
-        padding: 10px;
-        padding-top: 20px;
-        padding-bottom: 20px
+        border: 1px solid rgb(240, 240, 240);
+        padding-top: 25px;
+        padding-bottom: 25px;
+        border-radius:10px
     }
 
     .earn_techtitle {
