--- a/client/src/component/Input.module.css
+++ b/client/src/component/Input.module.css
@@ -2,24 +2,23 @@
     width: 100%;
     display: flex;
     flex-direction:column;
-    height:10rem;
-    background-color: var(--color-background);;
-    margin-bottom:40px;
-    padding:20px;
+    height:120px;
+    margin-bottom:5px;
+    padding:5px;
     align-items:center;
 }
 .form_input_card label{
     font-size: 1.3rem;
-    margin-bottom: 20px;
+    margin-bottom:5px;
     align-self: flex-start;
-    padding-left:20px
-
+    padding-left:5%;
 }
 .form_input_card input{
-    height:3.5rem;
+    height:65px;
     width:90%;
     padding:5px;
     font-size:1.2rem;
     color:rgb(100,100,100);
-    border-bottom:1px solid rgb(210,210,210)
+    background: rgb(240,240,240);
+    border-radius: 5px;
 }
