--- a/client/src/screen/admin_screen/UpgradeForm.module.css
+++ b/client/src/screen/admin_screen/UpgradeForm.module.css
@@ -54,20 +54,47 @@
     display:flex;
     align-items:center;
     justify-content:center;
-    width:100%;
+    width:90%;
     background-color:  var(--color-blue);
     margin-left:3px;
-    border-radius:20px
+    border-radius:5px
 
 }
 .form_submit_btn p{
     color:var(--color-background);
     font-size: 20px;
 }
+.selector{
+    width:100%;
+    margin:auto;
+    background-color:rgb(240,240,240);
+    height:55px;
+    padding:10px;
+    border-radius:5px;
+    font-size:17px
+}
+.imageOuterContainer{
+    overflow:scroll;
+    
+
+}
+.imageContainer{ 
+    object-fit: contain; 
+    height: 300px;
+    overflow:scroll;
+    text-align: center;
+    
+    
+}
+.image{
+    width:100%;
+
+    
+}
 
 @media screen and (max-width: 768px) {
     .form_submit_btn{
-        width:95%;
+        width:90%;
     }
     .form_input_card_container{
         width:98%;
