--- a/client/src/screen/admin_screen/UpgradeForm.module.css
+++ b/client/src/screen/admin_screen/UpgradeForm.module.css
@@ -8,10 +8,10 @@
     display:flex;
     flex-direction: column;
     width:100%;
-    padding:30px 0px 40px 0px;
     margin-right:auto;
     margin-left:auto;
-    background-color:var(--color-blue)
+    background-color:var(--color-blue);
+    justify-content: center;
 
 }
 
@@ -19,7 +19,7 @@
     font-weight: 300;
     align-self: flex-start;
     width:100%;
-    padding-left:10px;
+    padding-left:30px;
     color:var(--color-background);
     
     
