--- a/client/src/screen/admin_screen/UpgradeForm.module.css
+++ b/client/src/screen/admin_screen/UpgradeForm.module.css
@@ -2,25 +2,26 @@
     width: 100%;
     overflow-y: scroll;
     position: relative;
-    margin-bottom:30px;
+    margin-bottom:10px;
 }
 .form_main_heading_container{
-    display:flex;
-    flex-direction: column;
     width:100%;
     margin-right:auto;
     margin-left:auto;
     background-color:var(--color-blue);
     justify-content: center;
+    height:100px;
+    padding-top:30px;
+    padding-bottom:30px;
 
 }
 
 .form_main_heading {
     font-weight: 300;
-    align-self: flex-start;
     width:100%;
     padding-left:30px;
     color:var(--color-background);
+    margin-top:-10px
     
     
 }
