--- a/client/src/component/getStarted.module.css
+++ b/client/src/component/getStarted.module.css
@@ -70,13 +70,63 @@
 .getStartedSection_imageCon{
     width:49%;
     display:flex;
+    flex-direction:column;
     justify-content:center;
     align-items:center;
-    padding-right:100
+    padding-right:100;
+
     
 
 }
 
+.getStartedSection_image{
+    width:70%;
+    padding:15px;
+    padding-top:50px;
+    padding-bottom:50px;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:center;
+    padding-right:100;
+    background-color:rgb(250, 250, 250);
+    border-radius:10px
+    
+
+}
+
+.getStartedSection_imageCon_text{
+    color: var(--color-blue);
+    margin-bottom:20px;
+
+}
+.getStartedSection_imageCon_buttonCon{
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:center;
+    width:100%;
+    height:100%
+}
+
+.getStartedSection_imageCon_button{
+    padding-top:15px;
+    padding-bottom:15px;
+    margin-bottom:15px;
+    width:80%;
+    border-radius:30px;
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items:center;
+
+}
+.buttonText{
+    font-size:1.3rem;
+    margin-right:5px;
+    color:black
+
+}
 
 
 
@@ -92,14 +142,25 @@
     }
     .getStartedSection_imageCon{
         display:none;
-        width:40%;
+        width:80%;
+    
+    }
+    .getStartedSection_image{
+        width:80%;
+        padding:15px;
+        padding-top:50px;
+        padding-bottom:50px;
+        display:flex;
+        flex-direction:column;
+        justify-content:flex-start;
+        align-items:center;
+        padding-right:100;
+        background-color:rgb(250, 250, 250);
+        border-radius:10px
+        
     
     }
     
-  
-
-
-
   }
 
 
@@ -127,6 +188,21 @@
         width:100%;
         display:flex;
         flex-direction: column;
+    
+    }
+    .getStartedSection_image{
+        width:80%;
+        padding:15px;
+        padding-top:50px;
+        padding-bottom:50px;
+        display:flex;
+        flex-direction:column;
+        justify-content:flex-start;
+        align-items:center;
+        padding-right:100;
+        background-color:rgb(250, 250, 250);
+        border-radius:10px
+        
     
     }
     
