--- a/client/src/component/Modal/LoginModal.module.css
+++ b/client/src/component/Modal/LoginModal.module.css
@@ -14,7 +14,7 @@
     transform:translate(-50%,-50%)
 }
 .modal_input_card {
-    width:330px;
+    width:350px;
     background-color: #fff;
     z-index: 1000;
     padding-top:18px;
@@ -60,4 +60,15 @@
     width:50px;
     height:50px;
     color:var(--color-blue)
+}
+
+.modal_footer{
+    font-size: 15px;
+    font-weight:300;
+    font-family: poppins;
+    margin-bottom:5px;
+    align-self: center;
+    text-align: center;
+    padding-right:30px;
+    padding-left:30px
 }
