--- a/client/src/component/getStarted.module.css
+++ b/client/src/component/getStarted.module.css
@@ -5,7 +5,6 @@
     padding-bottom:30px;
     background: #fff;
     margin-bottom:30px
-
 }
 .getStartedSection_content{
     width:50%;
@@ -74,9 +73,6 @@
     justify-content:center;
     align-items:center;
     padding-right:100;
-
-    
-
 }
 
 .getStartedSection_image{
@@ -89,10 +85,8 @@
     justify-content:flex-start;
     align-items:center;
     padding-right:100;
-    background-color:rgb(250, 250, 250);
-    border-radius:10px
-    
-
+    background-color:rgb(242, 242, 242);
+    border-radius:10px;
 }
 
 .getStartedSection_imageCon_text{
@@ -106,7 +100,8 @@
     justify-content:flex-start;
     align-items:center;
     width:100%;
-    height:100%
+    height:100%;
+   
 }
 
 .getStartedSection_imageCon_button{
@@ -119,13 +114,13 @@
     flex-direction:row;
     justify-content:center;
     align-items:center;
-
+    background-color: rgb(239,239,239);
 }
+
 .buttonText{
-    font-size:1.3rem;
+    font-size:1.2rem;
     margin-right:5px;
     color:black
-
 }
 
 
